# barnes-hut-rs

./: Cargo.toml  LICENSE  README.md
data/systems/: solar.json  test2D.json
src/: lib.rs  main.rs  temp.rs
src/nbody/: barnes_hut.rs  bodies.rs  body.rs  direct.rs  generators.rs  mod.rs  plot.rs  simulation.rs
src/quadtree/: bb.rs  mod.rs  plot.rs  tree.rs
src/vector/: base.rs  mod.rs  vector3d.rs
