[package]
name = "barnes-hut"
version = "0.1.0"
authors = ["Josiah <joshikatsu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.2.15"
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"]}
rand = "0.7.3"
rand_distr = "0.2.2"
